# wechat-message-summary

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend-go/: Dockerfile  config.docker.yaml  go.mod  go.sum
backend-go/cmd/: config.yaml  main.go
backend-go/internal/common/databases/: message.go
backend-go/internal/common/enums/: messasge_attr.go
backend-go/internal/common/messages/: messages.go
backend-go/internal/runner/mcpserver/: runner.go
backend-go/internal/runner/wxautoconsumer/: runner.go
backend-go/pkg/database/: database.go
backend-go/pkg/natconsumer/: config.go  consumer.go  consumer_test.go
backend-go/pkg/runner/: runner.go
backend-go/pkg/zerologger/: logger.go
nats/: init-stream.sh
ocr-wechat-agent/: config.yaml  pyproject.toml
ocr-wechat-agent/src/: config.py  logger.py  main.py  ocr_engine.py  wechat_window.py
pywechat-agent/: config.yaml  pyproject.toml
pywechat-agent/src/: config.py  logger.py  main.py  message.py
wechat-agent/: config.yaml  pyproject.toml
wechat-agent/src/: config.py  logger.py  main.py
